@@ -18,8 +18,8 @@ using the provided 'sstableupgrade' tool.
 
 Upgrading
 ---------
-   - Nothing specific to this release, but please see previous versions upgrading section,
-     especially if you are upgrading from 2.2.
+    - Ec2MultiRegionSnitch will no longer automatically set broadcast_rpc_address
+      to the public instance IP if this property is defined on cassandra.yaml.
 
 3.0.7
 =====
